--- a/Documents/CODES/REACT/AnchorCorps/anchor-corps/src/index.css
+++ b/Documents/CODES/REACT/AnchorCorps/anchor-corps/src/index.css
@@ -15,3 +15,20 @@ body {
   margin: 0;
   overflow-x: hidden;
 }
+
+
+/* ANIMATIONS */
+@keyframes bobAndFade {
+  0%, 100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateY(-10px);
+    opacity: 0.5;
+  }
+}
+
+.down-arrow {
+  animation: bobAndFade 2s ease-in-out infinite;
+}
